tests/array/array_indexing_and_loans_errors.err.expected
error: at 40:5: [TC-ArrayIndexOutOfBounds] In function 'const_index_oob', block 'entry': Array index 3 out of bounds for [_; 3]
    |
 39 |     a = [1i64, 2i64, 3i64];
 40 |     r = &mut a[3i64];
    |     ^^^^^^^^^^^^^^^^
 41 |     return
    |
error: at 53:5: [TC-ArrayIndexOutOfBounds] In function 'zero_len_array_index_oob', block 'entry': Array index 0 out of bounds for [_; 0]
    |
 52 |   entry:
 53 |     r = &mut a[0i64];
    |     ^^^^^^^^^^^^^^^^
 54 |     return
    |
error: at 64:5: [TC-IndexOfNonArray] In function 'index_non_array', block 'entry': Cannot index non-array type i64
    |
 63 |   entry:
 64 |     y = copy x[0i64];
    |     ^^^^^^^^^^^^^^^^
 65 |     return
    |
error: at 79:5: [TC-ArrayIndexNotInteger] In function 'non_int_index', block 'entry': Array index must be an integer, got bool
    |
 78 |     b = true;
 79 |     x = copy a[copy b];
    |     ^^^^^^^^^^^^^^^^^^
 80 |     return
    |
error: at 53:5: [INIT-BorrowStateMismatch] In function 'zero_len_array_index_oob', block 'entry': cannot create &mut of 'a[0]': place must be initialized at borrow, but is not yet initialized
    |
 52 |   entry:
 53 |     r = &mut a[0i64];
    |     ^^^^^^^^^^^^^^^^
 54 |     return
    |
error: at 92:5: [INIT-BorrowDynamicIndexNonUniform] In function 'mut_borrow_dynamic_uninit_fails', block 'entry': cannot create &mut of 'a[?]': dynamic index requires the containing array to be uniformly initialized, but it is not yet initialized
    |
 91 |   entry:
 92 |     r = &mut a[copy i];
    |     ^^^^^^^^^^^^^^^^^^
 93 |     call use_mut(move r);
    |
error: at 108:5: [INIT-BorrowDynamicIndexNonUniform] In function 'out_borrow_dynamic_init_fails', block 'entry': cannot create &out of 'a[?]': dynamic index requires the containing array to be uniformly uninitialized, but it is initialized
     |
 107 |     a = [1i64, 2i64, 3i64];
 108 |     r = &out a[copy i];
     |     ^^^^^^^^^^^^^^^^^^
 109 |     call set_i64(move r, 1i64);
     |
error: at 125:5: [INIT-UseBeforeInit] In function 'read_partially_init_array', block 'entry': variable 'a' is used before initialization
     |
 124 |     call set_i64(move r0, 10i64);
 125 |     x = copy a[1i64];
     |     ^^^^^^^^^^^^^^^^
 126 |     return
     |
error: at 137:5: [INIT-UseBeforeInit] In function 'read_uninit_array_dynamic', block 'entry': variable 'a' is used before initialization
     |
 136 |   entry:
 137 |     x = copy a[copy i];
     |     ^^^^^^^^^^^^^^^^^^
 138 |     return
     |
